acceptance_tests/invalid_scripts/pool_without_size.erl
[{pool,
    [{worker_type, dummy_worker}],
    [{loop,
        [{time, {1, ms}},
         {rate, {ramp, linear, {1, rps}, {2, rps}}}],
        [{print, ""}]
    }]
}].